# BPC-PC1T-Dan-Juro-ka

./: .gitignore
22_restauracni_zarizeni/: 22_restauracni_zarizeni.cpp  22_restauracni_zarizeni.h  CMakeLists.txt  Popis.txt  databaze.txt  funkce.cpp  funkce.h  macros.h
CV03 (1)/FunExt/: FunExt.cpp
Cv02/: Autor.txt
Cv03/Bourka/: CMakeLists.txt
Cv03/Bourka/Bourka/: Bourka.cpp  Bourka.h  CMakeLists.txt
Cv03/FunExt/: FunExt.cpp
Cv04/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  jePrestupny.cpp  jePrestupny.h
Cv04/Prvocislo/: CMakeLists.txt  IsPrime.cpp  Prvocislo.cpp  Prvocislo.h  jePrvocislo.cpp  jePrvocislo.h
Cv05/Funkce/: CMakeLists.txt  Funkce.cpp  Funkce.h  skalarniSoucin.cpp  skalarniSoucin.h  soucet.cpp  soucet.h  vektorovySoucin.cpp  vektorovySoucin.h  velikost.cpp  velikost.h
Cv06/Pocty pismen a slov/: CMakeLists.txt  Počty písmen a slov.cpp
Cv06/Počty písmen a slov/: Počty písmen a slov.h
Cv08/Prunik/: CMakeLists.txt  Prunik.cpp  Prunik.h  juroska.cpp  juroska.h
Cv09/operace_s_vektory/: CMakeLists.txt  VectorMath.cpp  VectorMath.h  operace_s_vektory.cpp  operace_s_vektory.h
Cv10/pocet_pismen_a_cislic_a_delky_slov_ale_lepsi/: CMakeLists.txt  pocet_pismen_a_cislic_a_delky_slov_ale_lepsi.cpp  pocet_pismen_a_cislic_a_delky_slov_ale_lepsi.h  vstup.txt
Cv11/Hudba/: CMakeLists.txt  Hudba.cpp  HudbaDB.cpp  HudbaDB.h
